syntax = "proto3";

package com.dls.raft.rpc;

option java_multiple_files = true;
option java_package = "com.dls.raft.rpc";
option java_outer_classname = "RaftProto";

import "google/protobuf/empty.proto";

// Service
service Raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

service LoggingService {
  rpc Log(LogMessage) returns (google.protobuf.Empty);
}

// Messages for AppendEntries RPC
message AppendEntriesRequest {
  string leaderId = 1;
  int32 term = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

// Messages for RequestVote RPC
message RequestVoteRequest {
  string candidateId = 1;
  int32 term = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

// LogEntry structure (for replication)
message LogEntry {
  int32 index = 1;
  int32 term = 2;
  string command = 3;
  int64 timestamp = 4;
  string id = 5;
  string data = 6;
  string metadata = 7;
}

message LogMessage {
  string nodeId = 1;
  string message = 2;
}

